# blender_rhubarb_lipsync_ng

./: .gitignore  LICENSE  README.md  blender_manifest.toml  dev.md  environment-github.yml  environment.yaml  environment.yml  faq.md  pnl_blender_rhubarb.py  pyproject.toml  release_notes.md  troubleshooting.md  whatsnew.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature-request.yml  feature_request.yml  support.yml
.github/workflows/: release.yml  unit-test.yml  unit-tests-conda.yml  unit-tests.yml
doc/diagrams/: capture.wsd  mapping.wsd  template.iuml  thumbs.sh
rhubarb_lipsync/: __init__.py  blender_manifest.toml  resources
rhubarb_lipsync/blender/: __init__.py  action_support.py  auto_load.py  baking_operators.py  baking_utils.py  capture.py  capture_operators.py  capture_panel.py  capture_properties.py  cue_list.py  cue_uilist.py  depsgraph_handler.py  dropdown_helper.py  icons_manager.py  map_and_bake_panel.py  mapping_list.py  mapping_operators.py  mapping_properties.py  mapping_uilist.py  mapping_utils.py  misc_operators.py  op_blender_rhubarb.py  pnl_blender_rhubarb.py  preferences.py  prefs_blender_rhubarb.py  process_sound_file.py  properties.py  rhubarb_operators.py  sound_operators.py  sound_processing.py  sound_strip_operators.py  strip_placement_preferences.py  strip_placement_properties.py  testing_panel.py  ui_utils.py
rhubarb_lipsync/rhubarb/: cue_processor.py  log_manager.py  mouth_cues.py  mouth_shape_data.py  mouth_shape_info.py  process_sound_file.py  rhubarb_command.py  rhubarb_command_handling.py
scripts/: adhoc-install.py  auto_reload.py  compatibility_tests.py  config.py  github_releases.py  markdown_helper.py  package.py  rhubarb_bin.py  sphinx_build.py
sphinx/: conf.py  index.rst  rinoh_style.rts  rinoh_template.rts
src/rhubarb/: process_sound_file.py
tests/: aud.py  helper.py  loopTest.sh  readme.md  run_within_blender.py  sample_data.py  sample_project.py  test_NLA_dropdown.py  test_baking.py  test_baking_execution.py  test_baking_preparation.py  test_capture.py  test_cue_frames.py  test_data.py  test_dropdown_selections.py  test_mapping_utils.py  test_mouth_shape_data.py  test_process_sound_file.py  test_properties.py  test_sound_operators.py  test_ui_dropdown_changes.py  test_ui_utils.py
tests/data/: en_male_electricity-expected.json  threelittlekittens_01_rountreesmith-expected.json  threelittlekittens_01_rountreesmith.txt
