[project]
name = "rhubarb_lipsync"
version = "1.7.0"
license = { file = "LISENSE" }


[tool.rhubarb_lipsync.download]
base_url = "https://github.com/DanielSWolf/rhubarb-lip-sync/releases/download"            
base_name = "Rhubarb-Lip-Sync"
version="1.13.0"


[[tool.rhubarb_lipsync.platforms]]
name="Linux"
system_names=["Linux"] # To map from platform.system() values
blender_names=["linux-x64"]
download_sha256="bd260905e88d0bdadbd4d7b452cae3b78a880fe27d10d51586772f84aac69f71"
executable_name="rhubarb"


[[tool.rhubarb_lipsync.platforms]]
name="macOS"
system_names=["Darwin"] #TODO Verify
blender_names=["macos-x64", "macos-arm64"]
download_sha256="2d25c0ad89c0435d864a0f9ddb9d44757def8bf354b86be28eb3b5e7e9d78f62"
executable_name="rhubarb"


[[tool.rhubarb_lipsync.platforms]]
name="Windows"
system_names=["Windows"] #TODO Verify
blender_names=["windows-x64"]
download_sha256="189ac55dae253dba3994d4075b8375b615f255759c105c7ed21bd88ad7728386"
executable_name="rhubarb.exe"

[tool.setuptools]
packages = ["rhubarb_lipsync"]

[tool.pytest.ini_options]
# The tests can run on multiple threads but might not be safe/stable unless --forked is used too. This requires: pytest-xdist pytest-forked 
#addopts = ["--import-mode=importlib", "--forked", "--numprocesses=auto"]
#addopts = ["--import-mode=importlib", "--numprocesses=auto"]
# https://stackoverflow.com/questions/10253826/path-issue-with-pytest-importerror-no-module-named-yadayadayada/50610630#answer-50610630
pythonpath = [".", "tests"] 
# https://docs.pytest.org/en/7.1.x/explanation/goodpractices.html

# https://stackoverflow.com/questions/4673373/logging-within-pytest-tests
log_cli = true
log_cli_level = "DEBUG"
#log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
#log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.black]
line-length = 160
skip-string-normalization = true

[tool.isort]
profile = "black"
src_paths = ["rhubarb_lipsync", "tests", "scripts"]
line_length = 160

[tool.ruff]
line-length = 160
ignore = ["E741", "E722", "E731"]

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html
strict_optional = false
disallow_untyped_calls = true
warn_unused_configs = true
# disallow_untyped_defs = true 
check_untyped_defs = true
pretty = true


[[tool.mypy.overrides]]
module = ["bpy.*", "bgl", "blf", "aud", "addon_utils"]
ignore_missing_imports = true

# log.trace fix - below doesn't work. Seems it can't be set per imported module
#[[tool.mypy.overrides]]
#module = ["logging"]
#disable_error_code = ["attr-defined"]

